// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should invoke arm command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://mit.g4severhome.dk/ESI.API/API/Commands/invokeAPI",
      Object {
        "body": "{\\"email\\":\\"username\\",\\"password\\":\\"password\\",\\"panelId\\":\\"panelId-123\\",\\"methodToInvoke\\":\\"Arm\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`should invoke disarm command 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "https://mit.g4severhome.dk/ESI.API/API/Commands/invokeAPI",
      Object {
        "body": "{\\"email\\":\\"username\\",\\"password\\":\\"password\\",\\"panelId\\":\\"panelId-123\\",\\"methodToInvoke\\":\\"Disarm\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
